<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/menu_main">
        <menu>
            <item
                android:id="@+id/nav_drawer_dashboard"
                android:icon="@drawable/ic_dashboard"
                android:title="@string/nav_dashboard" />
            
            <item
                android:id="@+id/nav_drawer_schedule"
                android:icon="@drawable/ic_calendar"
                android:title="@string/nav_schedule" />
            
            <item
                android:id="@+id/nav_replacement_class"
                android:icon="@drawable/ic_replacement"
                android:title="@string/nav_replacement_class" />
        </menu>
    </item>
    
    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/nav_profile" />
            
            <item
                android:id="@+id/nav_auto_login"
                android:icon="@drawable/ic_auto_login"
                android:title="@string/auto_login" />
            
            <item
                android:id="@+id/nav_notification_settings"
                android:icon="@drawable/ic_notification"
                android:title="@string/notification_settings" />
        </menu>
    </item>
    
    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_refresh_data"
                android:icon="@drawable/ic_refresh"
                android:title="@string/refresh_data" />
            
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/about" />
        </menu>
    </item>
    
    <item>
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>
